--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">Welcome to our site -- Changed at site</a></div>
+				<div class="logo"><a href="#">Welcome to our site -- Change locally</a></div>
 			</header>
 
 		<!-- Main -->
